unpackaged/main/default/objects/Dossier_intervention__c/Dossier_intervention__c.object-meta.xml
<CustomObject>
    <label>Dossier d&apos;intervention</label>
    <nameField>
        <displayFormat>DI-{00000000}</displayFormat>
        <label>Dossier d&apos;intervention Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dossiers d&apos;intervention</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>