unpackaged/main/default/objects/Dossier_intervention__c/fields/Desciption_LAMal__c.field-meta.xml
<CustomField>
    <fullName>Desciption_LAMal__c</fullName>
    <label>Desciption (LAMal)</label>
    <length>6000</length>
    <type>LongTextArea</type>
</CustomField>