unpackaged/main/default/objects/Dossier_intervention__c/fields/Description_Fond_Soc__c.field-meta.xml
<CustomField>
    <fullName>Description_Fond_Soc__c</fullName>
    <label>Description (Fond. / Soc.)</label>
    <length>6000</length>
    <type>LongTextArea</type>
</CustomField>