unpackaged/main/default/objects/Dossier_intervention__c/fields/Description_Priv__c.field-meta.xml
<CustomField>
    <fullName>Description_Priv__c</fullName>
    <label>Description (Privé)</label>
    <length>6000</length>
    <type>LongTextArea</type>
</CustomField>