unpackaged/main/default/objects/Dossier_intervention__c/fields/Patient__c.field-meta.xml
<CustomField>
    <fullName>Patient__c</fullName>
    <label>Patient</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Veuillez renseigner un patient</errorMessage>
        <filterItems>
            <field>Account.Type</field>
            <operation>equals</operation>
            <value>Patient, Patient potentiel</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Dossiers d&apos;intervention</relationshipLabel>
    <relationshipName>Dossiers_d_intervention</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>