unpackaged/main/default/objects/Dossier_intervention__c/fields/Prise_en_charge_par_Lamal__c.field-meta.xml
<CustomField>
    <fullName>Prise_en_charge_par_Lamal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Prise en charge par LAMal</label>
    <type>Checkbox</type>
</CustomField>