unpackaged/main/default/objects/Dossier_intervention__c/fields/Type_de_prise_en_charge__c.field-meta.xml
<CustomField>
    <fullName>Type_de_prise_en_charge__c</fullName>
    <label>Type de prise en charge</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Maladie</fullName>
            </value>
            <value>
                <fullName>Accident</fullName>
            </value>
            <value>
                <fullName>Maternité</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>